autotests/syntax-tests/tests/negative/negative84.sref
Name { Name Name ( $FORWARD Name Name ) Name = : = ; = ; } ; 